--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,6 +1,8 @@
-= ARK: Survival Evolved Linux Server Tools
+= Dark and Light Linux Server Tools
 
-This tool allows you to manage any ARK: Survival Evolved linux server without having to remember long commands.
+= This is a work in progress in the hopes that DNL comes to Linux
+
+This tool allows you to manage any DNL linux server without having to remember long commands.
 It provides a lot of features, to get the full list check the <<Usage>> section.
 
 Installation
